feat: finish viewing round migration
